Fixing height problem and xp value on small devices

--- a/styles/layout/_crt.scss
+++ b/styles/layout/_crt.scss
@@ -1,5 +1,7 @@
 .crt {
-    width: 110rem;
+    // For fixing mobile width
+    min-width: 101rem;
+    width: 101rem;
     padding: 4rem;
     background-color: $color-black; 
     margin-top: 5rem;
@@ -12,6 +14,7 @@
         left: 0;
         bottom: 0;
         right: 0;
+        margin: 0 auto;
         background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
         z-index: 20;
         background-size: 100% .4rem, 3px 100%;
@@ -24,7 +27,6 @@
         position: absolute;
         top: 0;
         left: 0;
-        bottom: 0;
         right: 0;
         background-color: $color-black;
 
