--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -36,7 +36,7 @@
         }
 
         &--hp { width: 21%; }
-        &--ap { width: 17%; }
-        &--xp { width: 20%; }
+        &--ap { width: 16%; }
+        &--xp { width: 21%; }
     }
 }
